# sme-insights-agent

./: .replit  LICENSE  README.md  TEAM.md  agent.yaml  app.py  chain.py  main.py  pyproject.toml  replit  requirements.txt  upload.html
agents/: analyze.py
demo/: README.md  test_ollama_chat.py
docs/: agent_flow_logic.md  demo_output.md
mlruns/0/: meta.yaml
pdf_tools/: chunk_text.py  extract_text.py
prompts/: summary_prompt.txt
uploads/: Download test_financials.csv  Transpose example.xlsx  temp_uploaded.csv
